更新go版本为1.14

--- a/tool-image/Dockerfile
+++ b/tool-image/Dockerfile
@@ -2,13 +2,15 @@ FROM centos:7
 
 # LANG
 ENV LC_ALL=en_US.UTF-8 \
-    TZ=Asia/Shanghai \
-    GOPROXY=https://goproxy.cn
-    #GOPROXY=https://goproxy.io
+    TZ=Asia/Shanghai
+    
+#ENV GOPROXY=https://goproxy.cn
+#ENV GOPROXY=https://goproxy.io
     
 COPY ./go /usr/local/go
 COPY ./docker /usr/bin/docker
-COPY ./proxy.txt /proxy.txt
+#COPY ./proxy.txt /proxy.txt
+COPY ./toolbox /toolbox
 
 RUN cp /usr/local/go/bin/go /usr/local/bin/go && \
     yum install -y wget git vim make openssh-clients gcc g++ mysql-client bind-utils net-tools && \
